--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ ext.junitJupiterVersion  = '5.0.2'
 ext.log4jVersion         = '2.10.0'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'org.junit.platform.gradle.plugin'
 
 compileTestJava {
